--- a/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Edit.cshtml
+++ b/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model FitCardCRUD.Models.Estabelecimento
+﻿@model FitCardCRUD.ViewModel.EstabecimentoViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -15,54 +15,59 @@
         <h4>Estabelecimento</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.Estabelecimento.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.estabNome, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Estabelecimento.estabNome, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.estabNome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.estabNome, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Estabelecimento.estabNome, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Estabelecimento.estabNome, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.estabNomeFantasia, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Estabelecimento.estabNomeFantasia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.estabNomeFantasia, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.estabNomeFantasia, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Estabelecimento.estabNomeFantasia, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Estabelecimento.estabNomeFantasia, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.estabCNPJ, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Estabelecimento.estabCNPJ, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.estabCNPJ, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.estabCNPJ, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Estabelecimento.estabCNPJ, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Estabelecimento.estabCNPJ, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.estabEmail, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Estabelecimento.estabEmail, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.estabEmail, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.estabEmail, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Estabelecimento.estabEmail, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Estabelecimento.estabEmail, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.estabTelefone, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Estabelecimento.estabTelefone, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.estabTelefone, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.estabTelefone, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Estabelecimento.estabTelefone, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Estabelecimento.estabTelefone, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.estabStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Estabelecimento.CategoriaId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Estabelecimento.CategoriaId, new SelectList(Model.Categorias, "Id", "Name"), "Selecione a categoria", new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Estabelecimento.estabStatus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.estabStatus)
-                    @Html.ValidationMessageFor(model => model.estabStatus, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Estabelecimento.estabStatus)
+                    @Html.ValidationMessageFor(model => model.Estabelecimento.estabStatus, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
