--- a/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Index.cshtml
+++ b/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FitCardCRUD.Models.Estabelecimento>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Listagem";
 }
 
 <h2>Index</h2>
