--- a/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Index.cshtml
+++ b/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Listagem";
 }
 
-<h2>Index</h2>
+<h2>Listagem</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar Novo", "Create")
 </p>
 <table class="table">
     <tr>
