--- a/FitCardCRUD/FitCardCRUD/Views/Shared/_Layout.cshtml
+++ b/FitCardCRUD/FitCardCRUD/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Listagem", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("FitCardCRUD", "Listagem", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
