Ajustes de nomenclatura das telas e botões

--- a/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Index.cshtml
+++ b/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Index.cshtml
@@ -53,8 +53,8 @@
             @Html.DisplayFor(modelItem => item.estabStatus)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
