--- a/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Delete.cshtml
+++ b/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que quer deletar esse estabelecimento?</h3>
 <div>
     <h4>Estabelecimento</h4>
     <hr />
@@ -74,7 +74,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Voltar para listagem", "Index")
         </div>
     }
 </div>
