--- a/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Details.cshtml
+++ b/FitCardCRUD/FitCardCRUD/Views/Estabelecimentoes/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model FitCardCRUD.ViewModel.EstabecimentoViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
     <h4>Estabelecimento</h4>
@@ -69,6 +69,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Estabelecimento.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Estabelecimento.Id }) |
+    @Html.ActionLink("Voltar para listagem", "Index")
 </p>
